Fixed Scrollbar

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -19,22 +19,25 @@
 
 /* Scrollbar Styles */
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
   background: var(--background);
-  border-radius: var(--radius-med);
 }
 
 ::-webkit-scrollbar-thumb {
   background: var(--primaryContainer);
-  border-radius: var(--radius-med);
+  border-radius: var(--radius-big);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--primary);
+  background: var(--tertiary);
+  cursor: grab;
+}
+
+::-webkit-scrollbar-thumb:active {
+  cursor: grabbing;
 }
 
 
